manage_posts_cli.py richly functional

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         // お知らせの生成
         helData.announcements.forEach(item => {
             const listItem = document.createElement('li');
-            listItem.textContent = item;
+            listItem.innerHTML = item;
             announcementsList.appendChild(listItem);
         });
         
